// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Video authenticate=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="https://plus4u.net/path/trusted.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate=null 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="https://plus4u.net/path/trusted.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="https://plus4u.net/path/trusted.mp4?access_token=token-for-tests"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    autoPlay={true}
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video className="my-classname" 1`] = `
<Span
  className="uu5-bricks-video my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video my-classname"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video className="test-classname" 1`] = `
<Span
  className="uu5-bricks-video test-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video test-classname"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video default props 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={false}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled=false 3`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled=true 1`] = `
<Span
  className="uu5-bricks-video"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    autoPlay={false}
    className="uu5-bricks-video uu5-common-disabled"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled=true 3`] = `
<Span
  className="uu5-bricks-video"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    autoPlay={false}
    className="uu5-bricks-video uu5-common-disabled"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video docKit examples UU5.Bricks.Video should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    content="autoplay"
    id="uuID02"
    key="uuID02"
    level={2}
  />
  <Video
    autoPlay={true}
    id="uuID03"
    key="uuID03"
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    type="mp4"
  />
  <Header
    content="disableControls"
    id="uuID04"
    key="uuID04"
    level={2}
  />
  <Video
    autoPlay={true}
    disableControls={true}
    id="uuID05"
    key="uuID05"
    muted={true}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  />
  <Header
    content="loop"
    id="uuID06"
    key="uuID06"
    level={2}
  />
  <Video
    id="uuID07"
    key="uuID07"
    loop={true}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  />
  <Header
    content="poster"
    id="uuID08"
    key="uuID08"
    level={2}
  />
  <Video
    id="uuID09"
    key="uuID09"
    poster="https://images.pexels.com/photos/220067/pexels-photo-220067.jpeg?w=200&h=250"
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  />
  <Header
    content="preload"
    id="uuID010"
    key="uuID010"
    level={2}
  />
  <Video
    id="uuID011"
    key="uuID011"
    preload="none"
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  />
  <Header
    content="muted"
    id="uuID012"
    key="uuID012"
    level={2}
  />
  <Video
    id="uuID013"
    key="uuID013"
    muted={true}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  />
</div>
`;

exports[`UU5.Bricks.Video elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video fullTextSearchPriority=0 1`] = `
<Span
  className="uu5-bricks-video uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video uu-fulltextsearch-0"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden=false 3`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden=true 1`] = `
<Span
  className="uu5-bricks-video"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video uu5-common-hidden"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden=true 3`] = `
<Span
  className="uu5-bricks-video"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video uu5-common-hidden"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video id="myId" 1`] = `
<Span
  className="uu5-bricks-video"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="myId"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video id="test-id" 1`] = `
<Span
  className="uu5-bricks-video"
  id="test-id-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="test-id"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    loop={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video mainAttrs=undefined 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    muted={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video name="myName" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="bigBox" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="bigBoxCollection" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="box" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="box" 3`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="boxCollection" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="container" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "authenticate": false,
        "autoPlay": false,
        "className": null,
        "controlled": true,
        "disableControls": false,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": false,
        "mainAttrs": null,
        "muted": false,
        "name": null,
        "nestingLevel": "inline",
        "onBeforeChunkLoad": null,
        "parent": null,
        "poster": "",
        "preload": "auto",
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
        "style": null,
        "tooltip": null,
        "type": null,
      },
      "refs": Object {},
      "state": Object {
        "authenticatedPosterUrl": undefined,
        "authenticatedVideoUrl": undefined,
        "disabled": false,
        "hidden": false,
        "muted": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Video",
    }
  }
  linkTitle="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  modalHeader="Video"
/>
`;

exports[`UU5.Bricks.Video nestingLevel="inline" 3`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "authenticate": false,
        "autoPlay": false,
        "className": null,
        "controlled": true,
        "disableControls": false,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": false,
        "mainAttrs": null,
        "muted": false,
        "name": null,
        "nestingLevel": "inline",
        "onBeforeChunkLoad": null,
        "parent": null,
        "poster": "",
        "preload": "auto",
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
        "style": null,
        "tooltip": null,
        "type": null,
      },
      "refs": Object {},
      "state": Object {
        "authenticatedPosterUrl": undefined,
        "authenticatedVideoUrl": undefined,
        "disabled": false,
        "hidden": false,
        "muted": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Video",
    }
  }
  linkTitle="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  modalHeader="Video"
/>
`;

exports[`UU5.Bricks.Video nestingLevel="page" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "authenticate": false,
        "autoPlay": false,
        "className": null,
        "controlled": true,
        "disableControls": false,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": false,
        "mainAttrs": null,
        "muted": false,
        "name": null,
        "nestingLevel": "smallBox",
        "onBeforeChunkLoad": null,
        "parent": null,
        "poster": "",
        "preload": "auto",
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
        "style": null,
        "tooltip": null,
        "type": null,
      },
      "refs": Object {},
      "state": Object {
        "authenticatedPosterUrl": undefined,
        "authenticatedVideoUrl": undefined,
        "disabled": false,
        "hidden": false,
        "muted": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Video",
    }
  }
  linkTitle="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  modalHeader="Video"
/>
`;

exports[`UU5.Bricks.Video nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "authenticate": false,
        "autoPlay": false,
        "className": null,
        "controlled": true,
        "disableControls": false,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": false,
        "mainAttrs": null,
        "muted": false,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "onBeforeChunkLoad": null,
        "parent": null,
        "poster": "",
        "preload": "auto",
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
        "style": null,
        "tooltip": null,
        "type": null,
      },
      "refs": Object {},
      "state": Object {
        "authenticatedPosterUrl": undefined,
        "authenticatedVideoUrl": undefined,
        "disabled": false,
        "hidden": false,
        "muted": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Video",
    }
  }
  linkTitle="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
  modalHeader="Video"
/>
`;

exports[`UU5.Bricks.Video nestingLevel="spa" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noIndex=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noIndex=true 1`] = `
<Span
  className="uu5-bricks-video uu5-noindex uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video uu5-noindex uu-fulltextsearch-0"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noPrint=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noPrint=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video poster="https://images.pexels.com/photos/220067/pexels-photo-220067.jpeg?w=200&h=250" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    poster="https://images.pexels.com/photos/220067/pexels-photo-220067.jpeg?w=200&h=250"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload="auto" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload="metadata" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="metadata"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload="none" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="none"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  pureRender={true}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected=false 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected=true 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  selected={true}
>
  <video
    className="uu5-bricks-video uu5-common-selected"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style="padding:8px; borderRadius: 2px" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style={"backgroundColor":"red","color":"blue"} 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style={"margin":8} 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "margin": 8,
    }
  }
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video tooltip="My Tooltip" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel={null}
  tooltip="My Tooltip"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title="My Tooltip"
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type="m3u8" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <Suspense
    fallback=""
  >
    <lazy
      authenticate={false}
      onBeforeChunkLoad={null}
      videoAttrs={
        Object {
          "className": "uu5-bricks-video",
          "controls": true,
          "id": "uuID",
          "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
          "style": Object {},
          "title": null,
          "type": "m3u8",
        }
      }
    />
  </Suspense>
</Span>
`;

exports[`UU5.Bricks.Video type="mp4" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type="ogg" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="ogg"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type="webm" 1`] = `
<Span
  className="uu5-bricks-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="webm"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;
